--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, shrink-to-fit=0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
   <title>color-wander</title>
-  <link href='https://fonts.googleapis.com/css?family=Oxygen:300,700' rel='stylesheet' type='text/css'>
   <style type="text/css">
   canvas {
     cursor: pointer;
@@ -18,7 +17,7 @@
     font-weight: 200;
     text-transform: uppercase;
     font-size: 12.25px;
-    font-family: 'Oxygen', sans-serif
+    font-family: sans-serif
   }
   .noselect {
     -webkit-touch-callout: none; /* iOS Safari */
